# nested-tasks-prettier

./: Cargo.toml  README.md  rustfmt.toml
src/: kernel.rs  lib.rs  main.rs  parser.rs  prettier.rs  task.rs  treatment.rs
src/kernel/: task.rs  tree.rs
src/kernel/treatment/: emojinize.rs
src/treatment/: emojinize.rs
